manifests/pos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pos
  template:
    metadata:
      labels:
        app: pos
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: pos
          image: ghcr.io/zuppler/pos:latest
          ports:
            - name: http
              containerPort: 8080
            - name: ws
              containerPort: 8081
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
