manifests/pos/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos
spec:
  selector:
    app: pos
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: ws
      port: 81
      targetPort: 8081
  type: ClusterIP
