manifests/pos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pos.discovery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pos
                port:
                  number: 80
